<resources>
    <string name="app_name">funulate</string>
    <string name="calculator">Calculator</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="o">o</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="log">log</string>
    <string name="caret">^</string>
    <string name="del">del</string>
    <string name="c">c</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="bs">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mul">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="enter">Enter</string>
    <string name="go_to_google">Go to GOOGLE</string>
    <string name="click">click</string>
</resources>